--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+aurex-meta (1.267~aurex12.04.60) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added unzip to aurex-desktop, aurex-desktop-depinf, aurex-desktop-
+    secretaria, ausias-desktop, ausias-fatcli-desktop
+  * Added zip to aurex-desktop, aurex-desktop-depinf, aurex-desktop-
+    secretaria, ausias-desktop, ausias-fatcli-desktop
+  * Removed nautilus-pdftools from aurex-desktop-depinf-recommends,
+    aurex-desktop-recommends, aurex-desktop-secretaria-recommends,
+    ausias-desktop-recommends, ausias-fatcli-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Thu, 23 Jan 2014 16:55:31 +0100
+
 aurex-meta (1.267~aurex12.04.59) precise; urgency=low
 
   * Refreshed dependencies
