--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,15 @@
+aurex-meta (1.267~aurex12.04.61) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added nautilus-pdf-tools to aurex-desktop-depinf-recommends, aurex-
+    desktop-recommends, aurex-desktop-secretaria-recommends, ausias-
+    desktop-recommends, ausias-fatcli-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Fri, 24 Jan 2014 10:14:51 +0100
+
 aurex-meta (1.267~aurex12.04.60) precise; urgency=low
 
   * Refreshed dependencies
-  * Added unzip to aurex-desktop, aurex-desktop-depinf, aurex-desktop-
-    secretaria, ausias-desktop, ausias-fatcli-desktop
-  * Added zip to aurex-desktop, aurex-desktop-depinf, aurex-desktop-
-    secretaria, ausias-desktop, ausias-fatcli-desktop
   * Removed nautilus-pdftools from aurex-desktop-depinf-recommends,
     aurex-desktop-recommends, aurex-desktop-secretaria-recommends,
     ausias-desktop-recommends, ausias-fatcli-desktop-recommends
