--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+aurex-meta (1.267~aurex12.04.63) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-wine to aurex-desktop-depinf-recommends, aurex-desktop-
+    recommends, aurex-desktop-secretaria-recommends, ausias-desktop-
+    recommends, ausias-fatcli-desktop-recommends
+  * Removed wine from aurex-desktop-depinf-recommends, aurex-desktop-
+    recommends, aurex-desktop-secretaria-recommends, ausias-desktop-
+    recommends, ausias-fatcli-desktop-recommends
+  * Removed wine1.6 from aurex-desktop-depinf-recommends, aurex-desktop-
+    recommends, aurex-desktop-secretaria-recommends, ausias-desktop-
+    recommends, ausias-fatcli-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Sun, 26 Jan 2014 23:42:38 +0100
+
 aurex-meta (1.267~aurex12.04.62) precise; urgency=low
 
   * Refreshed dependencies
