--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+aurex-meta (1.267~aurex12.04.65) precise; urgency=low
+
+  * Dummy upgrade
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 27 Jan 2014 09:39:13 +0100
+
 aurex-meta (1.267~aurex12.04.63) precise; urgency=low
 
   * Refreshed dependencies
