--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+aurex-meta (1.267~aurex12.04.66) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added nautilus-pdftools to aurex-desktop-depinf-recommends, aurex-
+    desktop-recommends, aurex-desktop-secretaria-recommends, ausias-
+    desktop-recommends, ausias-fatcli-desktop-recommends
+  * Removed nautilus-pdf-tools from aurex-desktop-depinf-recommends,
+    aurex-desktop-recommends, aurex-desktop-secretaria-recommends,
+    ausias-desktop-recommends, ausias-fatcli-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Mon, 27 Jan 2014 21:06:33 +0100
+
 aurex-meta (1.267~aurex12.04.65) precise; urgency=low
 
   * Dummy upgrade
