--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+aurex-meta (1.267~aurex12.04.67) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-pdftools to aurex-desktop-depinf-recommends, aurex-
+    desktop-recommends, aurex-desktop-secretaria-recommends, ausias-
+    desktop-recommends, ausias-fatcli-desktop-recommends
+  * Removed nautilus-pdftools from aurex-desktop-depinf-recommends,
+    aurex-desktop-recommends, aurex-desktop-secretaria-recommends,
+    ausias-desktop-recommends, ausias-fatcli-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Tue, 28 Jan 2014 13:10:39 +0100
+
 aurex-meta (1.267~aurex12.04.66) precise; urgency=low
 
   * Refreshed dependencies
