--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+aurex-meta (1.267~aurex12.04.68) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added libvirt-bin to aurex-asir, aurex-daw, aurex-inf, aurex-smr
+  * Added qemu-kvm to aurex-asir, aurex-daw, aurex-desktop-depinf,
+    aurex-inf, aurex-smr
+  * Added virt-manager to aurex-asir, aurex-daw, aurex-inf, aurex-smr
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Tue, 04 Feb 2014 12:57:52 +0100
+
 aurex-meta (1.267~aurex12.04.67) precise; urgency=low
 
   * Refreshed dependencies
