--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+aurex-meta (1.267~aurex12.04.69) precise; urgency=low
+
+  * Refreshed dependencies
+  * Added aurex-powerpoint-viewer to aurex-desktop-depinf-recommends,
+    aurex-desktop-recommends, aurex-desktop-secretaria-recommends,
+    ausias-desktop-recommends, ausias-fatcli-desktop-recommends
+
+ -- Luis Antonio Garcia Gisbert <luisgg@gmail.com>  Wed, 05 Feb 2014 08:04:38 +0100
+
 aurex-meta (1.267~aurex12.04.68) precise; urgency=low
 
   * Refreshed dependencies
